# 404_Luck_Not_Found_Cliente

./: .env  .gitignore  CasinoScreenManager.py  README.md  __init__.py  inicio.py  pyproject.toml  requirements.txt  test_auth_system.py
docs/: AUTH_SYSTEM_README.md  PRINT_FORM_DOCS.md  kivy_layouts.md
screens/: __init__.py  home.py  inicio.py
screens/forms/: __init__.py  advanced_login.py  login.py  login_avanzado.py  login_firestore_form.py  login_form.py  login_hub.py  login_with_print_form.py  register_form.py
screens/juegos/: __init__.py  blackjack.py  poker.py
screens/juegos/blackjack/: __init__.py  blackjack_inicio.py  blackjack_juego.py  blackjack_shared.py  cartas.py
screens/juegos/knucklebones/: __init__.py  knucklebones.py  knucklebones_inicio.py  knucklebones_juego.py
src/: CasinoScreenManager.kv
src/components/: glassmorphism.py
src/components/shaders/: glassmorphism.glsl
src/screens/inicio/: Inicio.kv  Inicio.py
src/screens/inicio/BottomBar/: BottomBar.kv  BottomBar.py
src/screens/inicio/JuegoSeccion/: JuegoSeccion.kv  JuegoSeccion.py  JuegoSeccionItem.kv
src/screens/inicio/TopBar/: Saldo.kv  TopBar.kv  TopBar.py  UserImage.kv  UserInicio.kv
src/screens/portada/: Portada.kv  Portada.py
src/utils/: utils.py
utils/: __init__.py  async_examples.py  async_wrapper.py  auth_controller.py  events.py  firebase_auth.py  helpers.py  printers.py  realtime_game_listener.py  user_session.py
